--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Calculator</title>
 </head>
 <body>
+    <input type="text" />
+    
     <button onclick="">1</button>
     <button onclick="">2</button>
     <button onclick="">3</button>
